# finsight-ai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md
.github/: copilot-instructions.md
backend/: .coverage  .env.example  AGENTS.md  cleanup_test_folders.py  json_to_markdown.py  main.py  pyproject.toml  run_tests.sh
backend/app/models/: schemas.py  transaction.py
backend/app/routers/: folders.py  process.py  process_old.py
backend/app/services/: ade.py  extraction.py  progress.py  storage.py
backend/app/utils/: __init__.py  amount.py  csv.py
backend/local_storage/metadata/: 44f6b964-2676-438b-98bf-a67e3315442d.json  92275b0b-6dca-4653-b346-b8521ca83751.json  a76f5ec9-b49d-4f88-9241-3d5dd274d076.json  acc6f43e-4a80-4283-bb98-528dba83cce4.json  cf69dd7d-d967-44c4-9660-ebfb31e679dd.json  d4b48e17-6467-4cad-870b-a48928907b52.json
backend/local_storage/parsed/44f6b964-2676-438b-98bf-a67e3315442d/: Karnataka-Bank-Small.pdf.json  Union-Bank-01 1.pdf.json
backend/local_storage/parsed/92275b0b-6dca-4653-b346-b8521ca83751/: Karnataka-Bank-Ltd-01.pdf.formatted.md  Karnataka-Bank-Ltd-01.pdf.json  Union-Bank-01 1.pdf.json
backend/local_storage/parsed/acc6f43e-4a80-4283-bb98-528dba83cce4/: Karnataka-Bank-Small.pdf.json
backend/local_storage/parsed/cf69dd7d-d967-44c4-9660-ebfb31e679dd/: Karnataka-Bank-Small.pdf.json
backend/local_storage/parsed/d4b48e17-6467-4cad-870b-a48928907b52/: Karnataka-Bank-Small.pdf.json  Union-Bank-01 1.pdf.json
backend/tests/: conftest.py  test_cleanup.py  test_folders.py  test_process.py  test_storage.py
(+41 files in other folders)
